# range-only

./: .gitignore  CMakeLists.txt  DataAnalysis.ipynb  Doxyfile  README.md  anchors.json  data.csv  doxygen.conf  emulator parameters.json  emulator.h  emulator.hpp  factors.h  factors.hpp  getData.sh  graphHander.h  kernels.h  logging.h  main.cpp  model parameters.json  optimizer.cpp  parameters.json  params.json  path.json  simple.cpp  wrappers.h
data/: DataAnalysis.ipynb  Experiment.ipynb  GP.ipynb  data.csv  path.csv  path.json
data/.ipynb_checkpoints/: DataAnalysis-checkpoint.ipynb  GP-checkpoint.ipynb
data/100-step/: covariance.csv  data.csv  inverse covariance cholesky.csv  jacobian.csv
data/200-step/: covariance.csv  data.csv  inverse covariance cholesky.csv
data/200-step/.ipynb_checkpoints/: DataAnalysis-checkpoint.ipynb
data/200-step/400-step/: inverse covariance cholesky.csv
data/400-step/: anchors.csv  covariance.csv  data.csv
data/addingGP/: covariance.csv  data.csv  inverse covariance cholesky.csv
data/removingGP/: anchors.csv  data.csv
data/testGtsam/: data10.csv  data100.csv  data125.csv  data150.csv  data175.csv  data20.csv  data30.csv  data40.csv  data70.csv  data80.csv  data90.csv  jacobian10.csv  jacobian100.csv  jacobian150.csv  jacobian175.csv  jacobian20.csv  jacobian40.csv  jacobian50.csv  jacobian60.csv  jacobian70.csv  jacobian80.csv
data/testNaive/: anchors90.csv  data10.csv  data125.csv  data150.csv  data175.csv  data40.csv  data70.csv  data80.csv  data90.csv  jacobian10.csv  jacobian100.csv  jacobian125.csv  jacobian30.csv  jacobian50.csv  jacobian60.csv  jacobian70.csv  jacobian80.csv  jacobian90.csv
data/testOptimised/: data10.csv  data100.csv  data125.csv  data150.csv  data20.csv  data40.csv  data50.csv  data70.csv  jacobian100.csv  jacobian125.csv  jacobian175.csv  jacobian50.csv  jacobian80.csv
data/timeBrownian-sq/testGtsam/: data10.csv  data100.csv  data110.csv  data120.csv  data130.csv  data140.csv  data150.csv  data160.csv  data170.csv  data180.csv  data190.csv  data20.csv  data200.csv  data30.csv  data40.csv  data50.csv  data60.csv  data70.csv  data80.csv  data90.csv  jacobian10.csv  jacobian100.csv  jacobian110.csv  jacobian120.csv  jacobian130.csv  jacobian140.csv  jacobian150.csv  jacobian160.csv  jacobian170.csv  jacobian180.csv  jacobian190.csv  jacobian20.csv  jacobian200.csv  jacobian30.csv  jacobian40.csv  jacobian50.csv  jacobian60.csv  jacobian70.csv  jacobian80.csv  jacobian90.csv
data/timeBrownian-sq/testNaive/: data10.csv  data100.csv  data110.csv  data120.csv  data130.csv  data140.csv  data150.csv  data160.csv  data170.csv  data180.csv  data190.csv  data20.csv  data200.csv  data30.csv  data40.csv  data50.csv  data60.csv  data70.csv  data80.csv  data90.csv  jacobian100.csv  jacobian110.csv  jacobian120.csv  jacobian130.csv  jacobian140.csv  jacobian150.csv  jacobian160.csv  jacobian170.csv  jacobian180.csv  jacobian190.csv  jacobian20.csv  jacobian200.csv  jacobian30.csv  jacobian40.csv  jacobian50.csv  jacobian60.csv  jacobian70.csv  jacobian80.csv  jacobian90.csv
data/timeBrownian-sq/testOptimised10/: data10.csv  data100.csv  data110.csv  data120.csv  data130.csv  data140.csv  data150.csv  data160.csv  data170.csv  data180.csv  data190.csv  data20.csv  data200.csv  data30.csv  data40.csv  data50.csv  data60.csv  data70.csv  data80.csv  data90.csv  jacobian10.csv  jacobian100.csv  jacobian110.csv  jacobian120.csv  jacobian130.csv  jacobian140.csv  jacobian150.csv  jacobian160.csv  jacobian170.csv  jacobian180.csv  jacobian190.csv  jacobian20.csv  jacobian200.csv  jacobian30.csv  jacobian40.csv  jacobian50.csv  jacobian60.csv  jacobian70.csv  jacobian80.csv  jacobian90.csv
data/timeBrownian-sq/testOptimised20/: data10.csv  data100.csv  data110.csv  data120.csv  data130.csv  data140.csv  data150.csv  data160.csv  data170.csv  data180.csv  data190.csv  data20.csv  data200.csv  data30.csv  data40.csv  data50.csv  data60.csv  data70.csv  data80.csv  data90.csv  jacobian10.csv  jacobian100.csv  jacobian110.csv  jacobian120.csv  jacobian130.csv  jacobian140.csv  jacobian150.csv  jacobian160.csv  jacobian170.csv  jacobian180.csv  jacobian190.csv  jacobian20.csv  jacobian200.csv  jacobian30.csv  jacobian40.csv  jacobian50.csv  jacobian60.csv  jacobian70.csv  jacobian80.csv  jacobian90.csv
data/timeBrownianKernel/testGtsam/: data10.csv  data100.csv  data110.csv  data120.csv  data130.csv  data140.csv  data150.csv  data160.csv  data170.csv  data180.csv  data190.csv  data20.csv  data200.csv  data30.csv  data40.csv  data50.csv  data60.csv  data70.csv  data80.csv  data90.csv  jacobian10.csv  jacobian100.csv  jacobian110.csv  jacobian120.csv  (+16 more)
emulator/: CMakeLists.txt  cameraEmulator.h  emulator.h  random_tools.h  sensorEmulator.h
examples/: jsonDump.cpp
examples/rangeSensor/: CMakeLists.txt  dataEmulator.h
gaussianProcess/: CMakeLists.txt
gaussianProcess-examples/: CMakeLists.txt
gaussianProcess/gaussianProcess/: CMakeLists.txt  gaussian.h  graph_adders.h  kernels.h
gaussianProcess/utils/: CMakeLists.txt  random_tools.h
physical/: CMakeLists.txt  emulator.h  util.h
sensor/: CMakeLists.txt  base.h  calibration.cpp  jsonDump.cpp  localise.cpp  localising.cpp  random_tools.h  rangeSensor-localising.cpp
sensor/emulator/: CMakeLists.txt  cameraEmulator.h  sensorEmulator.h
sensor/physical/: CMakeLists.txt  emulator.h  sensor.h
sensor/rangeSensor/: CMakeLists.txt  data_emulator.h  data_real.h  measurement_adders.h
src/: CMakeLists.txt  calibration.cpp  factors.h  jsonDump.cpp  main.cpp
src/gaussianProcess/: CMakeLists.txt  graph_adders.h
src/lib/: CMakeLists.txt  factors.h  graph_adders.h  kernels.h
src/rangeSensor/: CMakeLists.txt  base.h  dataEmulator.h  realSource.h  sensor.h
src/sensor/: CMakeLists.txt  base.h  dataEmulator.h  random_tools.h  realSource.h  sensor.h  util.h
src/utils/: logging.h
tests/: CMakeLists.txt  dataEmulatorTest.cpp  distanceFactorTest.cpp  gaussianFactorTest.cpp  kernelTest.cpp  test_camera.cpp
tests/deprecated/: gaussianFactorTest.cpp  kernelTest.cpp
(+306 files in other folders)
